src/tests/snapshots/Shlang__tests__parser_test__declare_and_assign_expression.snap
---
source: src/tests/parser_test.rs
expression: "parse_full(\"var a = 1+2+b;\")"
---
Block {
    body: [
        Declaration(
            Spanned {
                unspanned: Declaration {
                    var_name: "a",
                    value: BinaryNode(
                        Spanned {
                            unspanned: BinaryNode {
                                kind: ADD,
                                left: Value(
                                    Spanned {
                                        unspanned: Num(
                                            1.0,
                                        ),
                                        span: (
                                            8,
                                            9,
                                        ),
                                    },
                                ),
                                right: BinaryNode(
                                    Spanned {
                                        unspanned: BinaryNode {
                                            kind: ADD,
                                            left: Value(
                                                Spanned {
                                                    unspanned: Num(
                                                        2.0,
                                                    ),
                                                    span: (
                                                        10,
                                                        11,
                                                    ),
                                                },
                                            ),
                                            right: Variable(
                                                Spanned {
                                                    unspanned: Variable {
                                                        name: "b",
                                                    },
                                                    span: (
                                                        12,
                                                        13,
                                                    ),
                                                },
                                            ),
                                        },
                                        span: (
                                            11,
                                            14,
                                        ),
                                    },
                                ),
                            },
                            span: (
                                9,
                                14,
                            ),
                        },
                    ),
                },
                span: (
                    0,
                    14,
                ),
            },
        ),
    ],
}
