src/tests/snapshots/Shlang__tests__parser_test__var_declare_and_assign_value.snap
---
source: src/tests/parser_test.rs
expression: "parse_full(\"var a = 2;\")"
---
Block {
    body: [
        Declaration(
            Spanned {
                unspanned: Declaration {
                    var_name: "a",
                    value: Value(
                        Spanned {
                            unspanned: Num(
                                2.0,
                            ),
                            span: (
                                8,
                                9,
                            ),
                        },
                    ),
                },
                span: (
                    0,
                    10,
                ),
            },
        ),
    ],
}
